--- a/Assets/css/pagina1.css
+++ b/Assets/css/pagina1.css
@@ -107,7 +107,7 @@
     border-bottom: #BE4242 solid 0.2rem;
 }
 
-//.livros div {
+.livros div {
     display: flex;
     justify-content: center;
     
@@ -143,5 +143,3 @@ footer {
     box-shadow: 0px -60px 4px #000000;
     z-index: 1;
 }
-
-footer div {}
