--- a/Assets/css/ficha jogador.css
+++ b/Assets/css/ficha jogador.css
@@ -7,6 +7,12 @@ h1 {
     font-family: sans-serif;
 }
 
+H2 {
+    font-family: sans-serif;
+    font-size: small;
+    text-align: center;
+}
+
 p {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -15,9 +21,21 @@ li {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+input {
+    background: #D9D9D9;
+}
+
 input:focus {
     outline: none;
     font-size: large;
+}
+
+h2 {
+    margin-bottom: 6rem;
+}
+
+body {
+    background: #EFEFEF;
 }
 
 .menu {
@@ -118,15 +136,14 @@ input:focus {
 
 .tituloInfo {
     text-align: center;
-    padding-top: 2em;
-    padding-bottom: 2rem;
+    margin-top: 3em;
 }
 
 .form {
     display: grid;
     grid-template-columns: 22% 22% 22% 22%;
     margin-bottom: 4rem;
-    margin-top: 3rem;
+    margin-top: 6rem;
     justify-content: center;
     row-gap: 4em;
 }
@@ -145,6 +162,90 @@ input:focus {
     grid-template-columns: 15% 15% 15% 15% 15% 15%;
     justify-content: center;
     text-align: center;
+    margin-bottom: 2.56rem;
+}
+
+.atribPad {
+    width: 70px;
+    height: 70px;
+    border-radius: 10%;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.103);
+    text-align: center;
+    font-size: xx-large;
+}
+
+.vidaContent {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4rem;
+}
+
+.salvguardMort {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: center;
+}
+
+.sucesso {
+    display: flex;
+}
+
+.sucesso p {
+    margin-right: 0.5rem;
+}
+
+.falha {
+    display: flex;
+}
+
+.falha p {
+    margin-right: 0.5rem;
+}
+
+.hp {
+    text-align: center;
+    margin-left: 6.5rem;
+    margin-right: 6.5rem;
+}
+
+.hp input {
+    width: 150px;
+    height: 150px;
+    border-radius: 10%;
+    text-align: center;
+    font-size: 80px;
+    margin-bottom: 0.7rem;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.103);
+}
+
+.hp p {
+    margin-bottom: 2rem;
+}
+
+.CID {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.cidPad {
+    display: flex;
+    margin-bottom: 1.5rem;
+    align-items: center;
+}
+
+.cidPad input {
+    width: 70px;
+    height: 70px;
+    border-radius: 10%;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.103);
+    text-align: center;
+    font-size: xx-large;
+}
+
+.cidPad p {
+    margin-left: 0.5rem;
 }
 
 footer {
